--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>شركة التوحيد لنقل العفش والاثاث 01030058647</title>
+        <title>شركة الزهراء لنقل العفش والاثاث 01030058647</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Construction Company Website Template" name="keywords">
         <meta content="Construction Company Website Template" name="description">
@@ -36,7 +36,7 @@
                         <div class="col-lg-4 col-md-12">
                             <div class="logo">
                                 <a href="index.html">
-                                    <h1>شركة التوحيد لنقل العفش</h1>
+                                    <h1>شركة الزهراء لنقل العفش</h1>
 									
                                     <!-- <img src="img/logo.jpg" alt="Logo"> -->
                                 </a>
@@ -215,16 +215,16 @@
                         </div>
                         <div class="col-lg-7 col-md-6 text-center">
                             <div id="about" class="section-header">
-                                <p>أهلا بك فى شركة التوحيد لنقل العفش</p>
+                                <p>أهلا بك فى شركة الزهراء لنقل العفش</p>
                                 <h2>خبرة لأكثر 10سنوات  فى خدمات نقل العفش لجميع المناطق والمحافظات</h2>
                             </div>
                             <div class="about-text">
                                 <p>
-                                    حظيت شركة التوحيد لنقل العفش بمصر على اهتمام الكثيرين كواحدة من أبرز شركات نقل اثاث ، وذلك نتيجة لخبرة طاقمها الواسعة في عمليات نقل وتغليف الأثاث، بالإضافة إلى الخصومات التي تقدمها لزبائنها.
+                                    حظيت شركة الزهراء لنقل العفش بمصر على اهتمام الكثيرين كواحدة من أبرز شركات نقل اثاث ، وذلك نتيجة لخبرة طاقمها الواسعة في عمليات نقل وتغليف الأثاث، بالإضافة إلى الخصومات التي تقدمها لزبائنها.
 
                                 </p>
                                 <p>
-                                   تُقدم شركة التوحيد نقل العفش مع خدمات نقل وتغليف اثاث مع الفك والتركيب داخل مصر على مدار الساعة طيلة أيام الأسبوع.
+                                   تُقدم شركة الزهراء نقل العفش مع خدمات نقل وتغليف اثاث مع الفك والتركيب داخل مصر على مدار الساعة طيلة أيام الأسبوع.
 
                                 </p>
                                 <a style="display:block; margin: 0 auto;" class="btn" href="tel:01030058647">إحجز اليوم</a>
@@ -542,7 +542,7 @@
                                 <div class="slider-item">
                                     <h3>نقل العفش</h3>
                                    
-                                    <p>تعتمد شركة التوحيد
+                                    <p>تعتمد شركة الزهراء
 على أحدث الوسائل والأساليب التي تتبعها الشركة للحفاظ على الأثاث والأجهزة الكهربائية والمقتنيات من أي ضرر أو تلف.
 .</p>
                                 </div>
@@ -727,7 +727,7 @@
                 <div class="container copyright">
                     <div class="row">
                         <div class="col-md-6">
-                            <p>&copy; <a href="#">شركة التوحيد لنقل العفش</a>, كل الحقوق محفوظة.</p>
+                            <p>&copy; <a href="#">شركة الزهراء لنقل العفش</a>, كل الحقوق محفوظة.</p>
                         </div>
                         <div class="col-md-6">
                             <p>تم التصميم والتطوير بواسطة <a href="tel:01024888950">كود هاوس للبرمجيات والتسويق</a></p>
